--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -37,8 +37,6 @@
 {% else %}
 <div id="login" class="container mx-auto p-8 flex">
     <div class="max-w-md w-full mx-auto">
-        <h1 class="text-4xl text-center mb-12 font-thin">Company</h1>
-
         <div class="bg-white rounded-lg overflow-hidden shadow-2xl">
             <div class="p-8">
                 <form method="post" class="" action="{% url 'users:login' %}" method="post">
@@ -65,8 +63,7 @@
 
             <div class="flex justify-between p-8 text-sm border-t border-gray-300 bg-gray-100">
                 <a href="{% url 'users:register' %}" class="font-medium text-indigo-500">Create account</a>
-
-                <a href="#" class="text-gray-600">Forgot password?</a>
+                <a href="{% url 'password_reset_form' %}" class="text-gray-600">Forgot password?</a>
             </div>
         </div>
     </div>
