--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -30,6 +30,12 @@
   margin-right: 10px;
 }
 
+@media only screen and (max-width: 600px) {
+  .admin {
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+}
 .admin {
   margin-right: 10px;
 }
@@ -40,9 +46,28 @@
 }
 
 .truncate {
-  width: 1000px;
+  width: 800px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   margin: 0;
+}
+
+canvas {
+  height: 600px;
+  width: 600px;
+}
+@media only screen and (max-width: 600px) {
+  canvas
+  {
+    height: 300px;
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .allposts
+  {
+    max-width: 500px;
+  }
 }
