--- a/templates/posts/all_posts.html
+++ b/templates/posts/all_posts.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-<body class="flex bg-gray-100 min-h-screen">
+<body class="sm:flex bg-gray-100 min-h-screen">
 
     <main class="p-6 sm:p-10 space-y-6">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
@@ -14,7 +14,7 @@
                 <h1 class="text-4xl font-semibold mb-2">All posts</h1>
                 {% comment %} <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2> {% endcomment %}
             </div>
-            <div class="flex flex-wrap items-start justify-center -mb-3">
+            <div class="flex flex-wrap items-center justify-center -mb-3">
                 {% comment %} SEARCH {% endcomment %}
                 <form class="d-flex" method='GET' action="{% url 'users:search' %}">
                     <div class="search shadow flex">
@@ -32,7 +32,7 @@
                 </form>
                 {% if request.user.is_staff %}
                 <a href={% url 'admin:index' %}><button
-                        class="admin inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -42,7 +42,7 @@
                     </button>
                 </a>
                 <a href={% url 'posts:create_post' %}><button
-                        class="admin inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -53,7 +53,7 @@
                 </a>
                 {% endif %}
                 <a href={% url 'users:edit_user' pk=user.pk %}><button
-                        class="inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -65,14 +65,14 @@
             </div>
         </div>
         <!--LIST OF POSTS -->
-        <div class="grid md:grid-cols-2 xl:grid-cols-4 gap-2">
+        <div class="allposts grid md:grid-cols-2 xl:grid-cols-4 gap-2">
             {% for post in page_obj %}
             <div class="flex flex-col md:col-span-2 md:row-span-2 bg-white shadow rounded-lg">
                 <a href={% url 'posts:post_details' pk=post.pk %}>
                     <div class="px-4 py-5 font-semibold border-b border-gray-100">{{ post.title }}</div>
                 </a>
-                <div class="overflow-y-auto" style="max-height: 30rem;">
-                    <ul class="p-4 space-y-4">
+                <div class="flex flex-wrap">
+                    <ul class="p-4 space-y-1">
                         <li class="flex items-left">
                             <span class="truncate text-gray-600">{{ post.body }}</span>
                             {% comment %} <span class="ml-auto font-semibold">{{ user.all| floatformat:2 }}</span>
