--- a/templates/users/list_of_users_by_office.html
+++ b/templates/users/list_of_users_by_office.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-<body class="flex bg-gray-100 min-h-screen">
+<body class="sm:flex bg-gray-100 min-h-screen">
     {% if messages %}
 
     <div id="mydiv" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
@@ -17,44 +17,46 @@
     </div>
 
     {% endif %}
-    <main class="p-6 sm:p-10 space-y-6">
+    <main class="p-6 sm:p-10 space-y-6 text-center sm:text-left">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
             <div class="mr-6">
                 <a href="{{request.META.HTTP_REFERER}}">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M10 19l-7-7m0 0l7-7m-7 7h18" />
-                </svg></a>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                    </svg></a>
                 <h2 class="text-gray-600 ml-0.5">{{ work_office }}</h2>
             </div>
-            <div class="flex flex-wrap items-start justify-end -mb-3">
-                {% comment %} SEARCH {% endcomment %}
-                <form class="d-flex" method='GET' action="{% url 'users:search' %}">
-                    <div class="search shadow flex">
-                        <input class="w-full rounded p-3" type="text" name='q' placeholder="Search...">
-                        <button
-                            class="text-purple-600 bg-white w-auto flex justify-end items-center text-blue-500 p-2 hover:text-blue-400"
-                            type="submit">
+                <div class="flex flex-wrap items-center justify-center -mb-3">
+                    {% comment %} SEARCH {% endcomment %}
+                    <form class="d-flex" method='GET' action="{% url 'users:search' %}">
+                        <div class="search shadow flex">
+                            <input class="w-full rounded p-3" type="text" name='q' placeholder="Search...">
+                            <button
+                                class="text-purple-600 bg-white w-auto flex justify-end items-center text-blue-500 p-2 hover:text-blue-400"
+                                type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
+                    {% if request.user.is_staff %}
+                    <a href={% url 'admin:index' %}><button
+                            class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                            </svg>
-                        </button>
-                    </div>
-                </form>
-                    {% if request.user.is_staff %}
-                    <a href={% url 'admin:index' %}><button
-                            class="admin inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                                    d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                             </svg>
                             Admin Panel
                         </button>
                     </a>
                     <a href={% url 'posts:create_post' %}><button
-                            class="admin inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                            class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                             <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                 class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -65,7 +67,7 @@
                     </a>
                     {% endif %}
                     <a href={% url 'users:edit_user' pk=user.pk %}><button
-                            class="inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                            class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                             <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                 class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -74,6 +76,7 @@
                             Edit Profile
                         </button>
                     </a>
+                </div>
             </div>
         </div>
         <!--LIST OF USERS BY OFFICE-->
@@ -112,8 +115,7 @@
                                     <td class="px-6 py-4 whitespace-nowrap">
                                         <div class="flex items-center">
                                             <div class="flex-shrink-0 h-10 w-10">
-                                                <img class="h-10 w-10 rounded-full"
-                                                    src="{{ user.profile_image.url }}"
+                                                <img class="h-10 w-10 rounded-full" src="{{ user.profile_image.url }}"
                                                     alt="">
                                             </div>
                                             <div class="ml-4">
@@ -157,8 +159,8 @@
                                             class="text-indigo-600 hover:text-indigo-900">Rate</a>
                                     </td>
                                     {% endif %}
-                                    
-                                   {% if request.user.is_staff %}
+
+                                    {% if request.user.is_staff %}
                                     <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                                         <a href="{% url 'users:user_details' pk=user.pk %}"
                                             class="text-indigo-600 hover:text-indigo-900">View profile</a>
