--- a/templates/users/user_details.html
+++ b/templates/users/user_details.html
@@ -7,7 +7,7 @@
 
 
 <body class="flex bg-gray-100 min-h-screen">
-    <main class="p-6 sm:p-10 space-y-6">
+    <main class="p-6 sm:p-10 space-y-6 text-center sm:text-left">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
             <div class="flex flex-wrap items-start space-y-6 md:space-y-0 justify-center -mb-3">
                 <h1 class="text-4xl font-semibold mb-2"><a href="{% url 'users:list_of_users' %}">
