--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -11,11 +11,11 @@
 
 {% if user.is_authenticated %}
 
-<div id="logged-in" class="container mx-auto p-8 flex">
+<div id="logged-in" class="container justify-center mx-auto p-8 flex">
     <section class="loged-in text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
             <h2 class="sm:text-3xl text-2xl text-gray-900 font-medium title-font mb-2 md:w-2/5">You are already logged
-                on to this server</h2>
+                in</h2>
             <div class="md:w-3/5 md:pl-6">
                 <p class="leading-relaxed text-base">To proceed further use navigation or continue by...</p>
                 <div class="flex md:mt-4 mt-6">
