--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,15 +1,30 @@
 #login {
-  margin-bottom: 270px;
+  margin-top: 50px;
+  margin-bottom: 150px;
 }
+@media only screen and (max-width: 600px) {
+  #login {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
+#logged-in {
+  margin-top: 50px;
+  margin-bottom: 300px;
+}
+
+@media only screen and (max-width: 600px) {
+  #logged-in {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
 
 #register {
   margin-top: 50px;
   margin-bottom: 50px;
-}
-
-#logged-in {
-  padding-bottom: 320px;
-  padding-top: 200px;
 }
 
 #span {
@@ -68,6 +83,18 @@ canvas {
 @media only screen and (max-width: 600px) {
   .allposts
   {
-    max-width: 500px;
+    width: 300px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .userdetprofimg
+  {
+    justify-content: center;
+    position: absolute;
   }
 }
