--- a/templates/ratings/edit_comment.html
+++ b/templates/ratings/edit_comment.html
@@ -7,10 +7,7 @@
 <body class="flex bg-gray-100 min-h-screen">
     <main class="p-6 sm:p-10 space-y-6">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
-            <div class="mr-6">
-                <h1 class="text-4xl font-semibold mb-2">Dashboard</h1>
-                <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
-            </div>
+            <div class="mr-6"></div>
         </div>
         <!--Employee information-->
         <form method="post">
@@ -27,9 +24,6 @@
             {% endif %}
             <div class="bg-white shadow overflow-hidden sm:rounded-lg">
                 <div class="px-4 py-5 sm:px-6">
-                    <img class="h-10 w-10 rounded-full"
-                        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=256&h=256&q=60"
-                        alt="">
                     <h3 class="text-lg leading-6 font-medium text-gray-900">
                         Edit <strong>{{ post.reviewed_by.first_name }} {{ post.reviewed_by.last_name }}</strong> text comment
                     </h3>
