--- a/templates/users/user_details.html
+++ b/templates/users/user_details.html
@@ -6,18 +6,11 @@
 {% block content %}
 
 
-<body class="flex bg-gray-100 min-h-screen">
+<body class="sm:flex bg-gray-100 min-h-screen">
     <main class="p-6 sm:p-10 space-y-6 text-center sm:text-left">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
-            <div class="flex flex-wrap items-start space-y-6 md:space-y-0 justify-center -mb-3">
-                <h1 class="text-4xl font-semibold mb-2"><a href="{% url 'users:list_of_users' %}">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                            stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M10 19l-7-7m0 0l7-7m-7 7h18" />
-                        </svg></a></h1>
-            </div>
-            <div class="flex flex-wrap items-start space-y-6 md:space-y-0 justify-center -mb-3">
+            <div class="mr-6"></div>
+            <div class="flex flex-wrap items-start justify-center -mb-3">
                 {% comment %} SEARCH {% endcomment %}
                 <form class="d-flex" method='GET' action="{% url 'users:search' %}">
                     <div class="search shadow flex">
@@ -35,7 +28,7 @@
                 </form>
                 {% if request.user.is_staff %}
                 <a href={% url 'admin:index' %}><button
-                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -45,7 +38,7 @@
                     </button>
                 </a>
                 <a href={% url 'posts:create_post' %}><button
-                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -56,7 +49,7 @@
                 </a>
                 {% endif %}
                 <a href={% url 'users:edit_user' pk=user.pk %}><button
-                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -70,7 +63,7 @@
         <!--Employee information-->
         <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-                <img class="h-10 w-10 rounded-full" src="{{ user.profile_image.url }}" alt="">
+                <img class="userdetprofimg h-12 w-12 rounded-full" src="{{ user.profile_image.url }}" alt="">
                 <h3 class="text-lg leading-6 font-medium text-gray-900">
                     Employee information
                 </h3>
