--- a/templates/users/users_list.html
+++ b/templates/users/users_list.html
@@ -18,14 +18,11 @@
 
 {% endif %}
 
-<body class="flex bg-gray-100 min-h-screen">
-    <main class="p-6 sm:p-10 space-y-6">
+<body class="sm:flex bg-gray-100 min-h-screen">
+    <main class="p-6 sm:p-10 space-y-6 text-center sm:text-left">
         <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
-            <div class="mr-6">
-                <h1 class="text-4xl font-semibold mb-2">Dashboard</h1>
-                <h2 class="text-gray-600 ml-0.5">Mobile UX/UI Design course</h2>
-            </div>
-            <div class="flex flex-wrap items-start justify-end -mb-3">
+            <div class="mr-6"><h1 class="text-4xl font-semibold mb-2">All users</h1></div>
+            <div class="flex flex-wrap items-center justify-center -mb-3">
                 {% comment %} SEARCH {% endcomment %}
                 <form class="d-flex" method='GET' action="{% url 'users:search' %}">
                     <div class="search shadow flex">
@@ -43,7 +40,7 @@
                 </form>
                 {% if request.user.is_staff %}
                 <a href={% url 'admin:index' %}><button
-                        class="admin inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -53,7 +50,7 @@
                     </button>
                 </a>
                 <a href={% url 'posts:create_post' %}><button
-                        class="admin inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -64,7 +61,7 @@
                 </a>
                 {% endif %}
                 <a href={% url 'users:edit_user' pk=user.pk %}><button
-                        class="inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md mb-3">
+                        class="adminbox inline-flex px-2 py-3 text-purple-600 hover:text-purple-700 focus:text-purple-700 hover:bg-purple-100 focus:bg-purple-100 border border-purple-600 rounded-md">
                         <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="flex-shrink-0 h-5 w-5 -ml-1 mt-0.5 mr-2">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -77,7 +74,7 @@
         </div>
         <!--USERS LIST-->
         <section class="grid md:grid-cols-2 xl:grid-cols-1 gap-6">
-            <div class="flex items-center p-8">
+            <div class="flex items-center p-8 overflow-x-auto">
                 <table class="min-w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50">
                         <tr>
