--- a/templates/posts/post_edit.html
+++ b/templates/posts/post_edit.html
@@ -42,7 +42,8 @@
                         </div>
                         <div class="flex flex-wrap -mx-3 mb-6">
                             <div class="w-full flex justify-center">
-                                <a class="shadow-none bg-red-700 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full" href="{% url 'posts:post_details' pk=post.pk %}">Cancel</a>
+                                <a class="shadow-none bg-red-700 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full"
+                                    href="{% url 'posts:post_details' pk=post.pk %}">Cancel</a>
                                 <button type="submit" value="Submit"
                                     class="shadow-none bg-blue-700 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full">
                                     Submit
