--- a/templates/ratings/edit_comment.html
+++ b/templates/ratings/edit_comment.html
@@ -25,7 +25,8 @@
             <div class="bg-white shadow overflow-hidden sm:rounded-lg">
                 <div class="px-4 py-5 sm:px-6">
                     <h3 class="text-lg leading-6 font-medium text-gray-900">
-                        Edit <strong>{{ post.reviewed_by.first_name }} {{ post.reviewed_by.last_name }}</strong> text comment
+                        Edit <strong>{{ post.reviewed_by.first_name }} {{ post.reviewed_by.last_name }}</strong> text
+                        comment
                     </h3>
                 </div>
                 <div class="border-t border-gray-200">
@@ -37,7 +38,8 @@
                         </div>
                         <div class="flex flex-wrap -mx-3 mb-6">
                             <div class="w-full flex justify-center">
-                                <a class="shadow-none bg-red-700 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full" href="{% url 'users:user_details' pk=post.reviewed_user.pk %}">Cancel</a>
+                                <a class="shadow-none bg-red-700 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full"
+                                    href="{% url 'users:user_details' pk=post.reviewed_user.pk %}">Cancel</a>
                                 <button type="submit" value="Submit"
                                     class="shadow-none bg-blue-700 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full">
                                     Submit
