--- a/templates/ratings/rate.html
+++ b/templates/ratings/rate.html
@@ -9,9 +9,7 @@
         <!--Employee information-->
         <div class="bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="px-4 py-5 sm:px-6">
-                <img class="h-10 w-10 rounded-full"
-                    src="{{ user.profile_image.url }}"
-                    alt="">
+                <img class="h-10 w-10 rounded-full" src="{{ user.profile_image.url }}" alt="">
                 <h3 class="text-lg leading-6 font-medium text-gray-900">
                     {{ r_user.first_name }} {{ r_user.last_name }}
                 </h3>
@@ -150,7 +148,7 @@
                         <div class="flex flex-wrap -mx-3 mb-6">
                             <div class="w-full flex justify-center">
                                 <a class="shadow-none bg-red-700 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full"
-                                href="{{request.META.HTTP_REFERER}}">Cancel</a>
+                                    href="{{request.META.HTTP_REFERER}}">Cancel</a>
                                 <button type="submit" value="Submit"
                                     class="shadow-none bg-blue-700 hover:bg-blue-400 focus:shadow-outline focus:outline-none text-white font-bold py-4 px-10 rounded-full">
                                     Submit
