--- a/templates/users/edit_user.html
+++ b/templates/users/edit_user.html
@@ -26,9 +26,7 @@
             {% endif %}
             <div class="bg-white shadow overflow-hidden sm:rounded-lg">
                 <div class="px-4 py-5 sm:px-6">
-                    <img class="h-10 w-10 rounded-full"
-                        src="{{ user.profile_image.url }}"
-                        alt="">
+                    <img class="h-10 w-10 rounded-full" src="{{ user.profile_image.url }}" alt="">
                     <h3 class="text-lg leading-6 font-medium text-gray-900">
                         Edit information
                     </h3>
