--- a/templates/users/registration/password_reset_complete.html
+++ b/templates/users/registration/password_reset_complete.html
@@ -1,5 +1,3 @@
-
-
 {% extends "base.html" %}
 
 {% block dashboard_nav %}
@@ -11,33 +9,29 @@
 
 {% include 'navbar.html' %}
 
-	<div id="login" class="container mx-auto p-8 flex">
-		<div class="max-w-md w-full mx-auto">
-			<h1 class="text-4xl text-center mb-12 font-thin">Password reset successfully</h1>
+<div id="login" class="container mx-auto p-8 flex">
+	<div class="max-w-md w-full mx-auto">
+		<h1 class="text-4xl text-center mb-12 font-thin">Password reset successfully</h1>
 
-			<div class="bg-white rounded-lg overflow-hidden shadow-2xl">
-				<div class="p-8">
-					<div class="container">
+		<div class="bg-white rounded-lg overflow-hidden shadow-2xl">
+			<div class="p-8">
+				<div class="container">
 
-						<div class="d-flex flex-column">
-							<p class="m-auto p-2">
-								Your password has been reset.You may go ahead and login with your new credentials.
-							</p>
-							<a href="{% url 'login' %}"><button class="w-full p-3 mt-4 bg-indigo-600 text-white rounded shadow" type="submit"
-                    			value="Log-in">Login</button></a>
-						</div>
+					<div class="d-flex flex-column">
+						<p class="m-auto p-2">
+							Your password has been reset.You may go ahead and login with your new credentials.
+						</p>
+						<a href="{% url 'login' %}"><button
+								class="w-full p-3 mt-4 bg-indigo-600 text-white rounded shadow" type="submit"
+								value="Log-in">Login</button></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 
 
 {% include 'footer.html' %}
 
 {% endblock %}
-
-
-
-
-
