--- a/templates/users/list_of_users_by_office.html
+++ b/templates/users/list_of_users_by_office.html
@@ -127,6 +127,7 @@
                                 <div class="text-sm text-gray-500"><a
                                         href="{{ user.work_office.get_absolute_url }}">{{ user.work_office }}</a>
                                 </div>
+                                <p class="text-sm text-gray-500">{{user.title}}</p>
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap">
                                 {% if user.is_active %}
